--- a/recent-post-label2.html
+++ b/recent-post-label2.html
@@ -207,7 +207,7 @@ var posts_date = false;
 var post_summary = true;
 var summary_chars = 150;
 </script>
-<script src="/feeds/posts/default?orderby=published&alt=json-in-script&callback=showlatestpostswiththumbs"></script>
+<script src="https://blogone-jr.blogspot.com/feeds/posts/default?orderby=published&alt=json-in-script&callback=showlatestpostswiththumbs"></script>
 
 </body>
 </html>
