Update and rename live-cricket1.html to live-crickets.html

--- a/live-crickets.html
+++ b/live-crickets.html
@@ -9,6 +9,6 @@
 <script>
   app="www.cricwaves.com"; mo="f1_zd"; tor =""; mtype ="";  wi="{{wi}}"; Width="302px"; Height="252px";  co ="ban"; 
 
- </script><script type="text/javascript" src="http://www.cricwaves.com/cricket/widgets/script/scoreWidgets.js"></script>
+ </script><script type="text/javascript" src="https://www.cricwaves.com/cricket/widgets/script/scoreWidgets.js"></script>
   </body>
 </html>
